--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="./">Home</a></li>
-              <li><a href="projects/">Projekte</a></li>
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projekte <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="projects">Überblick</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Web-Projekte</li>
+                  <li><a href="projects/kanbanBoardWithDart/index.php">Kanban Board (dart)</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Further project will follow</a></li>
+                </ul>
+              </li>
+
               <li><a href="CV/">CV</a></li>
               <li><a href="aboutme/">Über mich</a></li>
             </ul>
